--- a/Prueba1/angular.json
+++ b/Prueba1/angular.json
@@ -32,7 +32,7 @@
             "styles": [
               "src/styles.scss",
               "./node_modules/primeicons/primeicons.css",
-              "./primeng/resources/themes/md-dark-deeppurple/theme.css",
+              "primeng/resources/themes/md-dark-deeppurple/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
               "./node_modules/primeflex/primeflex.css"
             ],
